[front] add getPresignedUrl

--- a/netflix-frontend/src/app/components/table-serie/table-serie.component.css
+++ b/netflix-frontend/src/app/components/table-serie/table-serie.component.css
@@ -13,7 +13,7 @@
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: left;
-    background-color: #04AA6D;
+    background-color: #16a085;
     color: white;
   }
 
