[front] add form

--- a/netflix-frontend/src/app/pages/home-page/home-page.component.html
+++ b/netflix-frontend/src/app/pages/home-page/home-page.component.html
@@ -1,6 +1,6 @@
 <h1>Ajouter une série</h1>
 
-<p>to do</p>
+<app-form-serie (createSerie)="createSerie($event)"></app-form-serie>
 
 <h1>Liste des séries</h1>
 
