--- a/netflix-frontend/src/app/components/form-serie/form-serie.component.html
+++ b/netflix-frontend/src/app/components/form-serie/form-serie.component.html
@@ -2,20 +2,20 @@
     <div>
         <label for="nom">Nom de la série&nbsp;:</label>
         <input id="nom" type="text" name="nom" #nom="ngModel" [(ngModel)]="serie.nom" maxlength="50" required>
-        <span style="color:#e74c3c" *ngIf="!nom.valid && nom.errors?.['required']">Le champs est requis</span>
-        <span style="color:#e74c3c" *ngIf="!nom.valid && nom.errors?.['maxlength']">Le champs est trop long</span>
+        <span style="color:#e74c3c" *ngIf="!nom.valid && nom.errors?.['required'] && nom.dirty">Le champs est requis</span>
+        <span style="color:#e74c3c" *ngIf="!nom.valid && nom.errors?.['maxlength'] && nom.dirty">Le champs est trop long</span>
     </div>
     <div>
       <label for="description">Description&nbsp;:</label>
       <input id="description" type="text" name="description" #description="ngModel" [(ngModel)]="serie.description" maxlength="255" required>
-      <span style="color:#e74c3c" *ngIf="!description.valid && description.errors?.['required']">Le champs est requis</span>
-      <span style="color:#e74c3c" *ngIf="!description.valid && description.errors?.['maxlength']">Le champs est trop long</span>
+      <span style="color:#e74c3c" *ngIf="!description.valid && description.errors?.['required'] && description.dirty">Le champs est requis</span>
+      <span style="color:#e74c3c" *ngIf="!description.valid && description.errors?.['maxlength'] && description.dirty">Le champs est trop long</span>
     </div>
     <div>
         <label for="dateSortie">Date de sortie&nbsp;</label>
         <input id="dateSortie" type="text" name="dateSortie" #dateSortie="ngModel" [(ngModel)]="serie.date_sortie" maxlength="10" required>
-        <span style="color:#e74c3c" *ngIf="!dateSortie.valid && dateSortie.errors?.['required']">Le champs est requis</span>
-        <span style="color:#e74c3c" *ngIf="!dateSortie.valid && dateSortie.errors?.['maxlength']">Le champs est trop long</span>
+        <span style="color:#e74c3c" *ngIf="!dateSortie.valid && dateSortie.errors?.['required'] && dateSortie.dirty">Le champs est requis</span>
+        <span style="color:#e74c3c" *ngIf="!dateSortie.valid && dateSortie.errors?.['maxlength'] && dateSortie.dirty">Le champs est trop long</span>
       </div>
     <input type="submit" value="Valider" />
 </form>
