[front] input submit disabled

--- a/netflix-frontend/src/app/components/form-serie/form-serie.component.css
+++ b/netflix-frontend/src/app/components/form-serie/form-serie.component.css
@@ -19,10 +19,15 @@ input[type=text], select {
     cursor: pointer;
   }
   
-  input[type=submit]:hover {
+  input[type=submit]:hover:not(:disabled) {
     background-color: #45a049;
   }
   
+input:disabled {
+  opacity: 0.6;
+  cursor: not-allowed;
+}
+
   div {
     border-radius: 5px;
     background-color: #f2f2f2;
