--- a/netflix-frontend/src/app/components/form-serie/form-serie.component.html
+++ b/netflix-frontend/src/app/components/form-serie/form-serie.component.html
@@ -17,5 +17,5 @@
         <span style="color:#e74c3c" *ngIf="!dateSortie.valid && dateSortie.errors?.['required'] && dateSortie.dirty">Le champs est requis</span>
         <span style="color:#e74c3c" *ngIf="!dateSortie.valid && dateSortie.errors?.['maxlength'] && dateSortie.dirty">Le champs est trop long</span>
       </div>
-    <input type="submit" value="Valider" />
+    <input type="submit" value="Valider" [disabled]="!(nom.valid && description.valid && dateSortie.valid)" />
 </form>
