--- a/netflix-frontend/src/app/pages/detail-page/detail-page.component.html
+++ b/netflix-frontend/src/app/pages/detail-page/detail-page.component.html
@@ -1,6 +1,10 @@
-<ng-container *ngIf="$image | async as imgsrc">
-    <div *ngIf="imgsrc.code == 'GET_COVER_URL'; else test">
-        <img  [src]="imgsrc.message" alt="Place image title">
+<ng-container *ngIf="image">
+    <div *ngIf="image.code == 'GET_COVER_URL'; else test">
+        <img  [src]="image.message" alt="Place image title">
     </div>
     <ng-template #test> pas image</ng-template>
 </ng-container>
+
+<br />
+
+<app-input-file (uploadCover)="uploadCover($event)"></app-input-file>
