[front] add image loader

--- a/netflix-frontend/src/app/pages/detail-page/detail-page.component.html
+++ b/netflix-frontend/src/app/pages/detail-page/detail-page.component.html
@@ -1,9 +1,10 @@
-<ng-container *ngIf="image">
+<ng-container *ngIf="image; else loading">
     <div *ngIf="image.code == 'GET_COVER_URL'; else test">
         <img  [src]="image.message" alt="Place image title">
     </div>
     <ng-template #test> pas image</ng-template>
 </ng-container>
+<ng-template #loading>Chargement</ng-template>
 
 <br />
 
