--- a/netflix-frontend/src/app/app.component.html
+++ b/netflix-frontend/src/app/app.component.html
@@ -1,3 +1,3 @@
 <app-notification></app-notification>
-<button (click)="notify()">Notification</button>
+<!--<button (click)="notify()">Notification</button> -->
 <router-outlet></router-outlet>
