--- a/netflix-frontend/src/app/pages/acteur-page/acteur-list/acteur-list.component.html
+++ b/netflix-frontend/src/app/pages/acteur-page/acteur-list/acteur-list.component.html
@@ -1,6 +1,6 @@
 <div>
     <div *ngFor="let acteur of acteurs" (click)="navigateToDetails(acteur.id)">
-        <img *ngIf="acteur.image" src="{{acteur.image}}"/>
+        <img *ngIf="acteur.image" [src]="acteur.image" (error)="onErrorImage()"/>
         <span>{{acteur.nom}} {{acteur.prenom}}</span>
     </div>
 </div>
