--- a/netflix-frontend/src/app/pages/acteur-details-page/acteur-details-page.component.html
+++ b/netflix-frontend/src/app/pages/acteur-details-page/acteur-details-page.component.html
@@ -1,3 +1,3 @@
 <a href="/acteurs">Retour sur la page des acteurs</a>
-<app-acteur-details-form (updateActeur)="updateActeur($event)"></app-acteur-details-form>
-<app-acteur-details-image (uploadImage)="uploadImage($event)"></app-acteur-details-image>
+<app-acteur-details-form [acteur]="acteur" (updateActeur)="updateActeur($event)"></app-acteur-details-form>
+<app-acteur-details-image [image]="image" (uploadImage)="uploadImage($event)"></app-acteur-details-image>
