--- a/netflix-frontend/src/app/pages/acteur-page/acteur-list/acteur-list.component.css
+++ b/netflix-frontend/src/app/pages/acteur-page/acteur-list/acteur-list.component.css
@@ -1,8 +1,10 @@
 div {
     display: flex;
+    flex-wrap: wrap;
 }
 
 div > div {
+    flex: 1;
     display: flex;
     flex-direction: column;
     margin: 1em;
