--- a/netflix-frontend/src/app/pages/acteur-page/acteur-form/acteur-form.component.html
+++ b/netflix-frontend/src/app/pages/acteur-page/acteur-form/acteur-form.component.html
@@ -1,4 +1,4 @@
-<form #form="ngForm" (ngSubmit)="submit(form)">
+<form #form="ngForm" (ngSubmit)="submit(form)" *ngIf="acteur !== undefined">
     <div>
         <label for="prenom">Prénom&nbsp;:</label>
         <input id="prenom" type="text" name="prenom" #prenom="ngModel" [(ngModel)]="acteur.prenom" maxlength="50" required>
