--- a/netflix-frontend/src/app/components/input-file/input-file.component.html
+++ b/netflix-frontend/src/app/components/input-file/input-file.component.html
@@ -1,5 +1,5 @@
-<input type="file" (change)="onChange($event)" />
+<input type="file" (change)="onChange($event)" #input />
 
 <div *ngIf="file">
-  <button (click)="onUpload()">Upload the file</button>
+  <button (click)="onUpload(input)">Upload the file</button>
 </div>
